--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy
 tqdm
 wandb
 diffusers
-git+https://github.com/mlfoundations/open_clip@v2.6.1
+git+https://github.com/mlfoundations/open_clip@v2.9.1
 Pillow
 datasets
 accelerate
@@ -22,3 +22,4 @@ pydantic
 ujson
 nfnets-pytorch
 timm
+dalle2-pytorch
